<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/loginToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="?android:attr/homeAsUpIndicator"
                app:title="@string/login"
                app:titleTextAppearance="@style/ToolbarStyle"/>

            <EditText
                android:id="@+id/loginEmailTextField"
                style="@style/Montserrat"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                app:layout_constraintBottom_toTopOf="@+id/loginRegisterButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginToolbar"
                app:layout_constraintVertical_chainStyle="spread"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/loginPasswordTextField"
                style="@style/Montserrat"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginEmailTextField"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/loginButton"
                style="@style/MontserratBold"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="50dp"
                android:hapticFeedbackEnabled="true"
                android:onClick="@{() -> viewModel.signIn(viewModel.email, viewModel.password)}"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="@+id/loginRegisterButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/loginRegisterButton"
                style="@style/MontserratBold"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hapticFeedbackEnabled="true"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginEmailTextField" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <data>
        <variable
            name="viewModel"
            type="com.clem.clems_kitchen.viewmodels.account.LoginViewModel" />
    </data>
</layout>
